UseCase1/force-app/main/default/objects/Movie__c/fields/Displayed_image__c.field-meta.xml
<CustomField>
    <fullName>Displayed_image__c</fullName>
    <formula>IF( ISNULL( Picture__c ) ,null, IMAGE(Picture__c, &quot;Movie Image&quot; , 200, 250) )</formula>
    <label>Displayed image</label>
    <type>Text</type>
</CustomField>