UseCase1/force-app/main/default/objects/Movie__c/fields/MaleActorsPercentage__c.field-meta.xml
<CustomField>
    <fullName>MaleActorsPercentage__c</fullName>
    <label>MaleActorsPercentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>