UseCase1/force-app/main/default/objects/Movie__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>